use async gcloud sdk & cleanup

--- a/model-engine/requirements.in
+++ b/model-engine/requirements.in
@@ -10,6 +10,7 @@ azure-keyvault-secrets~=4.7.0
 azure-servicebus~=7.11.4
 azure-storage-blob~=12.19.0
 # GCP dependencies
+gcloud-aio-storage~=9.6
 google-auth~=2.25.0
 google-cloud-storage~=2.14.0
 boto3-stubs[essential]~=1.26.67
