--- a/model-engine/requirements-test.txt
+++ b/model-engine/requirements-test.txt
@@ -8,6 +8,8 @@ moto==3.1.12
 mypy==1.3.0
 pylint<3.0.0
 pytest==7.2.0
+# typeguard 4.5.0 (2026-02-15) requires typing_extensions>=4.13.0 but we pin 4.10.0
+typeguard<4.5.0
 pytest-asyncio==0.20.1
 pytest-cov==2.10.0
 pytest-mypy==0.9.1
