--- a/charts/model-engine/templates/balloon_cpu_deployment.yaml
+++ b/charts/model-engine/templates/balloon_cpu_deployment.yaml
@@ -30,7 +30,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       containers:
-        - image: public.ecr.aws/ubuntu/ubuntu:latest
+        - image: {{ $.Values.utilityImages.ubuntu.repository }}:{{ $.Values.utilityImages.ubuntu.tag }}
           imagePullPolicy: IfNotPresent
           name: main
           resources:
