--- a/charts/model-engine/templates/service_account_inference.yaml
+++ b/charts/model-engine/templates/service_account_inference.yaml
@@ -14,7 +14,11 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
     {{- if $.Values.azure }}
+    {{- if $.Values.azure.inference_client_id }}
+    azure.workload.identity/client-id: {{ $.Values.azure.inference_client_id }}
+    {{- else }}
     azure.workload.identity/client-id: {{ $.Values.azure.client_id }}
+    {{- end }}
     {{- end }}
   {{- end }}
 {{- if $.Values.azure }}
