--- a/charts/model-engine/templates/cacher_deployment.yaml
+++ b/charts/model-engine/templates/cacher_deployment.yaml
@@ -64,6 +64,7 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- include "modelEngine.cacherEnv" . | indent 10 }}
           {{- include "modelEngine.volumeMounts" . | indent 10 }}
+      automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
       serviceAccountName: {{ include "modelEngine.fullname" . }}
       {{- include "modelEngine.volumes" . | indent 6 }}
       {{- with .Values.nodeSelector }}
