--- a/charts/model-engine/templates/proportional_a10_autoscaler_deployment.yaml
+++ b/charts/model-engine/templates/proportional_a10_autoscaler_deployment.yaml
@@ -44,6 +44,7 @@ spec:
             - --logtostderr=true
             - --v=2
       priorityClassName: system-cluster-critical
+      automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
       serviceAccountName: {{ include "modelEngine.fullname" . }}
 {{- end }}
 {{- end }}
