--- a/charts/model-engine/templates/service_template_config_map.yaml
+++ b/charts/model-engine/templates/service_template_config_map.yaml
@@ -21,6 +21,7 @@
 {{- $service_template_aws_config_map_name := .Values.serviceTemplate.awsConfigMapName }}
 {{- $celery_broker_type := .Values.celeryBrokerType }}
 {{- $node_selector := .Values.nodeSelector }}
+{{- $gpu_tolerations := .Values.gpuTolerations }}
 {{- $require_aws_config := not (empty .Values.aws) }}
 {{- $enable_datadog := .Values.datadog.enabled }}
 {{- $azure_cloud_provider := not (empty .Values.azure) }}
@@ -106,6 +107,11 @@ data:
             - key: "nvidia.com/gpu"
               operator: "Exists"
               effect: "NoSchedule"
+            {{- range $gpu_tolerations }}
+            - key: {{ .key | quote }}
+              operator: "Exists"
+              effect: "NoSchedule"
+            {{- end }}
           {{- end }}
           priorityClassName: ${PRIORITY}
           containers:
@@ -545,6 +551,11 @@ data:
               - key: "nvidia.com/gpu"
                 operator: "Exists"
                 effect: "NoSchedule"
+              {{- range $gpu_tolerations }}
+              - key: {{ .key | quote }}
+                operator: "Exists"
+                effect: "NoSchedule"
+              {{- end }}
             {{- end }}
             priorityClassName: ${PRIORITY}
             containers:
@@ -811,6 +822,11 @@ data:
               - key: "nvidia.com/gpu"
                 operator: "Exists"
                 effect: "NoSchedule"
+              {{- range $gpu_tolerations }}
+              - key: {{ .key | quote }}
+                operator: "Exists"
+                effect: "NoSchedule"
+              {{- end }}
             {{- end }}
             priorityClassName: ${PRIORITY}
             containers:
@@ -1157,6 +1173,11 @@ data:
             - key: "nvidia.com/gpu"
               operator: "Exists"
               effect: "NoSchedule"
+            {{- range $gpu_tolerations }}
+            - key: {{ .key | quote }}
+              operator: "Exists"
+              effect: "NoSchedule"
+            {{- end }}
           {{- end }}
           {{- if $service_template_service_account_name }}
           serviceAccountName: {{ $service_template_service_account_name }}
@@ -1311,7 +1332,7 @@ data:
           {{- end }}
           {{- end }}
           containers:
-            - image: public.ecr.aws/docker/library/busybox:latest
+            - image: {{ $.Values.utilityImages.busybox.repository }}:{{ $.Values.utilityImages.busybox.tag }}
               imagePullPolicy: IfNotPresent
               name: busybox
               command: ["/bin/sh", "-ec", "while : ; do sleep 30 ; done"]
@@ -1351,7 +1372,7 @@ data:
             spec:
               containers:
               - name: ${NAME}
-                image: curlimages/curl:7.72.0
+                image: {{ $.Values.utilityImages.curl.repository }}:{{ $.Values.utilityImages.curl.tag }}
                 imagePullPolicy: IfNotPresent
                 command:
                 - curl
