--- a/charts/model-engine/templates/spellbook_init_job.yaml
+++ b/charts/model-engine/templates/spellbook_init_job.yaml
@@ -38,6 +38,7 @@ spec:
             - '{{- include "modelEngine.gatewayurl" . }}'
           {{- include "modelEngine.serviceEnvGitTagFromHelmVar" . | indent 10 }}
           {{- include "modelEngine.volumeMounts" . | indent 10 }}
+      automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
       serviceAccountName: {{ include "modelEngine.fullname" . }}
       {{- include "modelEngine.volumes" . | indent 6 }}
       {{- with .Values.nodeSelector }}
