--- a/charts/model-engine/templates/service_account.yaml
+++ b/charts/model-engine/templates/service_account.yaml
@@ -21,5 +21,8 @@ metadata:
 imagePullSecrets:
   - name: egp-ecr-regcred
 {{- end }}
+{{- with $.Values.automountServiceAccountToken }}
+automountServiceAccountToken: {{ . }}
+{{- end }}
 ---
 {{- end }}
