new downstream changes

--- a/charts/model-engine/values.yaml
+++ b/charts/model-engine/values.yaml
@@ -27,6 +27,8 @@ celery_broker_type_redis: null
 
 redis:
   auth:
+  authSecretName: ""
+  authSecretKey: ""
   enableTLS: false
   enableAuth: false
   kedaSecretName: ""
