some more changes

--- a/charts/model-engine/templates/service_account.yaml
+++ b/charts/model-engine/templates/service_account.yaml
@@ -21,8 +21,6 @@ metadata:
 imagePullSecrets:
   - name: egp-ecr-regcred
 {{- end }}
-{{- with $.Values.automountServiceAccountToken }}
-automountServiceAccountToken: {{ . }}
-{{- end }}
+automountServiceAccountToken: {{ $.Values.automountServiceAccountToken }}
 ---
 {{- end }}
